edit component updated for initial default input value

--- a/client/src/main.css
+++ b/client/src/main.css
@@ -195,6 +195,13 @@ textarea {
 	border-color: transparent;
 	border: 1px solid var(--grey-300);
 }
+/* custom added */
+.input-padd{
+	padding: 0;
+}
+.checkbox{
+	width: 10%;
+}
 .form-row {
 	margin-bottom: 1rem;
 }
